# MeaLeon

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Recount_Cuisine_Usage.ipynb  app.py  data.dvc  docker_requirements.txt  main.py  main_example.py  models_example.py  nltk.txt  pyproject.toml  requirements.txt  schemas.py  schemas_example.py  settings.ini  setup.py
.do/: app.yaml
.dvc/: config
.elasticbeanstalk/: config.yml
.github/workflows/: deploy_app.yml  test.yaml
MeaLeon/: _modidx.py  preprocessor.py
_proc/: index.ipynb
_proc/_docs/: robots.txt
from_template/: README.md
joblib/: .gitignore  2022.08.23.dvc  README.md  recipe_ohe.joblib  recipe_tfidf.joblib  recipe_word_matrix_ohe.joblib
joblib/2020.01.30/: recipe_ohe.joblib  recipe_tfidf.joblib  recipe_word_matrix_ohe.joblib
mealeon-aws/: requirements.txt
mealeon-aws/include/: python3.7m
models/: dish_predictor.py  find_similar_dishes.py  ohe_dish_predictor.py  prepare_database.py  prepare_ohe_database.py
nbs/: 00_core.ipynb  00_llmops_template.ipynb  00_template.ipynb  01_initial_eda.ipynb  02_refactor_eda_preprocessing_to_script.ipynb  03_eda_count_vectorization.ipynb  04_word_lists_combine_features.ipynb  05_follow_along_dagshub_mlflow.ipynb  06_langchain_init.ipynb  07_bertopic_testing.ipynb  08_stanza_testing.ipynb  09_stanza_mlflow_template_testing.ipynb  10_bertopic_stanza_mlflow_testing.ipynb  11_sklearn_mlfow_model_testing.ipynb  11a_sklearn_mlfow_model_testing_tfidf.ipynb  11b_sklearn_mlfow_model_testing_bertopic.ipynb  12_sklearn_speedup.ipynb  13_new_preproc_bge_test.ipynb  13_new_preproc_test.ipynb  14_new_preproc_bge_test.ipynb  15_new_preproc_test_combined_df.ipynb  16_notebook_refactor.ipynb  17_fastapi_notebook_refactor.ipynb  18_fastapi_edamam_check.ipynb  20_init_edama_vespa_search.ipynb  20_init_edamam_vespa_search.ipynb  21_convert_epicurious_to_sql.ipynb  23_process_other_json_data.ipynb  Convert_MySQL_to_Postgres.ipynb  index.ipynb  nbdev.yml  project_path.py
notebooks/exploratory/: 2022.05.19 - JSON source data EDA.ipynb  2022.06.22 - JSON EDA2, Testing CountVec.ipynb  2022.06.30 - JSON EDA3, Initial Visualizations.ipynb  2022.07.08 - JSON EDA4, Word Lists and Combine Features.ipynb  2022.07.08 - JSON EDA4, Word Lists and Combine Features_conf.ipynb  2022.08.19 - JSON EDA6, Test Tree Vis.ipynb  2022.08.25 - JSON EDA7, Test Custom Text Processing Script for Pickle.ipynb  2022.09.09 - JSON EDA8, Test Bokeh Plotting.ipynb  2022.10.13 - JSON EDA9, Test Refactored Scripts.ipynb  2022.10.27 - JSON EDA10, Find Optimal KMeans.ipynb  2022.11.07 - JSON EDA12, Dimension Reduction and Clustering.ipynb  2022.11.11 - JSON EDA13, HDBSCAN with DBCV.ipynb  2022.12.19 - JSON EDA14, Attaching HDBSCAN labels.ipynb  Recount_Cuisine_Usage.ipynb  eda_template.ipynb  project_path.py
secrets/: edamam.json
src/: custom_sklearn_text_transformer_mlflow.py  custom_stanza_mlflow.py  dataframe_preprocessor.py  nlp_processor.py  plotter.py  transformers.py
src/backend/: postgres_unnest.sql
src/backend/embedding_creation/: apply_stanza.py  sklearn_transformer_as_mlflow_model.py
src/backend/raw_data_cleaning/: convert_epicurious_to_vespa.py  convert_postgres_to_vespa.py  raw_data_preprocessor.py  text_processing.py
src/from_template/: wine_predictor.py
src/nltk/: dish_predictor.py  find_similar_dishes.py  ohe_dish_predictor.py  prepare_database.py
src/nltk (LEGACY)/: dish_predictor.py  find_similar_dishes.py  ohe_dish_predictor.py  prepare_database.py  prepare_ohe_database.py
static/: index.html
templates/: results.html
