[tool.poetry]
name = "mealeon"
version = "0.1.7"
description = "MeaLeon suggests recipes for a user to cook! It is a full stack data science project using machine learning, natural language processing, a web form, and AWS. This is the Poetry file to make it easier to deploy and work on the project."
authors = ["Aaron W. Chen <awc33@cornell.edu>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^2.0.2"
gensim = "^4.1.2"
jupyter = "^1.0.0"
jupyterlab = "^3.2.5"
numpy = "^1.21.5"
pandas = "^1.3.5"
requests = "^2.26.0"
scikit-learn = "^1.0.1"
scipy = "^1.7.3"
spacy = "^3.2.1"
stanza = "^1.3.0"
tqdm = "^4.62.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
importlib-resources = "^5.8.0"
zipp = "^3.8.0"
importlib-metadata = "^4.12.0"
xgboost = "^1.6.1"
graphviz = "^0.20.1"
openTSNE = "^0.6.2"
umap-learn = "^0.5.3"
python-utils = "^3.3.3"
adjustText = "^0.7.3"
bokeh = "^2.4.3"
gunicorn = "^20.1.0"
waitress = "^2.1.2"
nltk = "^3.7"
optuna = "^3.0.3"
dbcv = {git = "git@github.com:christopherjenness/DBCV.git"}
hdbscan = "^0.8.29"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.13.4"
pytest = "^6.2.5"
click = "8.0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
