[tool.poetry]
name = "MeaLeon"
version = "0.1.19"
description = "MeaLeon suggests recipes for a user to cook! It is a full stack data science project using machine learning, natural language processing, a web form, and AWS. This is the Poetry file to make it easier to deploy and work on the project."
authors = ["Aaron W. Chen <awc33@cornell.edu>"]
license = "GPL-3.0-or-later"
packages = [{ include = "MeaLeon" }]

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^2.0.2"
gensim = "^4.1.2"
jupyter = "^1.0.0"
jupyterlab = "^3.2.5"
numpy = "^1.21.5"
pandas = "^1.3.5"
requests = "^2.26.0"
scikit-learn = "^1.0.1"
scipy = "^1.7.3"
spacy = "^3.2.1"
stanza = "^1.3.0"
tqdm = "^4.62.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
importlib-resources = "^5.8.0"
zipp = "^3.8.0"
importlib-metadata = "^4.12.0"
xgboost = "^1.6.1"
graphviz = "^0.20.1"
openTSNE = "^0.6.2"
umap-learn = "^0.5.3"
python-utils = "^3.3.3"
adjustText = "^0.7.3"
bokeh = "^2.4.3"
gunicorn = "^20.1.0"
waitress = "^2.1.2"
nltk = "^3.7"
optuna = "^3.0.3"
hdbscan = "^0.8.29"
dvc = "^2.43.2"
dagshub = "^0.3.5"
boto3 = "==1.24.59"
llvmlite = "^0.39.1"
dvc-s3 = "^2.21.0"
mlflow = "^2.2.1"
openai = "^0.27.2"
bertopic = "^0.15.0"
torch = { version = "2.0.1", source = "torch" }
torchaudio = { version = "2.0.2", source = "torch" }
torchvision = { version = "0.15.2", source = "torch" }
# nvidia-cuda-runtime-cu12 = { version = "^12.2.53", source="nvidia"}
dill = "^0.3.7"
pyspark = "^3.5.0"
more-itertools = "^10.2.0"
flagembedding = "^1.2.5"
pyvespa = "^0.39.0"
uvicorn = "^0.30.4"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
psycopg = "^3.2.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.13.4"
pytest = "^6.2.5"
click = "8.0.4"
nbdev = "^2.3.9"
poetry2setup = "^1.1.0"
pre-commit = "^3.0.1"
nbqa = "^1.6.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.app.dependencies]
fastapi = {version = "0.112.2", extras = ["all"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
